--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "axios": "0.25.0",
     "bootstrap": "5.3.2",
     "font-awesome": "^4.7.0",
+    "lodash": "4.17.21",
     "react": "^17.0.2",
+    "react-bootstrap": "2.1.1",
     "react-dom": "^17.0.2",
+    "react-paginate": "8.1.0",
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
     "react-toastify": "8.1.0",
