--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "axios": "0.25.0",
+    "axios": "0.27.2",
     "bootstrap": "5.3.2",
     "font-awesome": "^4.7.0",
     "lodash": "4.17.21",
@@ -14,6 +14,7 @@
     "react-bootstrap": "2.1.1",
     "react-dom": "^17.0.2",
     "react-loader-spinner": "5.4.5",
+    "react-numeral": "1.1.1",
     "react-paginate": "8.1.0",
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
