--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lodash": "4.17.21",
     "react": "^17.0.2",
     "react-bootstrap": "2.1.1",
+    "@babel/plugin-proposal-private-property-in-object": "version",
     "react-dom": "^17.0.2",
     "react-loader-spinner": "5.4.5",
     "react-numeral": "1.1.1",
