--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "version",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -12,7 +13,6 @@
     "lodash": "4.17.21",
     "react": "^17.0.2",
     "react-bootstrap": "2.1.1",
-    "@babel/plugin-proposal-private-property-in-object": "version",
     "react-dom": "^17.0.2",
     "react-loader-spinner": "5.4.5",
     "react-numeral": "1.1.1",
@@ -20,6 +20,7 @@
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
     "react-toastify": "8.1.0",
+    "react-use-cart": "1.13.0",
     "sass": "1.48.0",
     "web-vitals": "^1.1.2"
   },
